--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
+    "@metamask/providers": "^13.1.0",
+    "@tailwindcss/forms": "^0.5.6",
+    "ethers": "^5.6.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
